[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_fumen_util"
version = "0.3.1"
authors = [
	{ name="Octupus Tea" },
]
description = "Python implementation of the JavaScript package 'FumenUtil'"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependecies = [
	"py-fumen-py >= 0.0.9",
]

[project.urls]
"Source" = "https://github.com/OctupusTea/py-fumen-util"
